<resources>
    <string name="app_name">Dino Pedia</string>
    <string-array name="info_dino_icon">
        <item>@drawable/sau</item>
        <item>@drawable/thero</item>
        <item>@drawable/orni</item>
        <item>@drawable/cera</item>
        <item>@drawable/hadro</item>
        <item>@drawable/anky</item>
        <item>@drawable/therizi</item>
        <item>@drawable/ptero</item>
    </string-array>
    <string-array name="dino_name">
        <item>Apatosaurus</item>
        <item>Brachiosaurus</item>
        <item>Tyrannosaurus</item>
        <item>Velociraptor</item>
        <item>Triceratops</item>
        <item>Stegosaurus</item>
        <item>Styracosaurus</item>
        <item>Parasaurolophus</item>
        <item>Edmontosaurus</item>
        <item>Ankylosaurus</item>
        <item>Euoplocephalus</item>
        <item>Therizinosaurus</item>
        <item>Nothronychus</item>
        <item>Pteranodon</item>
        <item>Quetzalcoatlus</item>
    </string-array>
    <string-array name="dino_gambar">
        <item>@drawable/apa</item>
        <item>@drawable/brachi</item>
        <item>@drawable/tyra</item>
        <item>@drawable/velo</item>
        <item>@drawable/trice</item>
        <item>@drawable/stego</item>
        <item>@drawable/styra</item>
        <item>@drawable/para</item>
        <item>@drawable/edmon</item>
        <item>@drawable/angkyl</item>
        <item>@drawable/euoplo</item>
        <item>@drawable/teri</item>
        <item>@drawable/noth</item>
        <item>@drawable/ptera</item>
        <item>@drawable/quet</item>
    </string-array>
    <string-array name="dino_desc">
        <item>Apatosaurus adalah dinosaurus herbivora yang besar, memiliki leher panjang dan ekor yang juga panjang.</item>
        <item>Brachiosaurus adalah dinosaurus sauropoda yang memiliki leher panjang dan tubuh besar.</item>
        <item>Tyrannosaurus adalah dinosaurus karnivora raksasa dengan kepala besar dan gigi tajam.</item>
        <item>Velociraptor adalah dinosaurus theropoda dengan tubuh kecil dan cakar yang mematikan.</item>
        <item>Triceratops adalah dinosaurus herbivora besar dengan tubuh besar dan tiga tanduk pada kepala.</item>
        <item>Stegosaurus adalah Dinosaurus herbivora dengan punggung yang dilapisi dengan piring tulang.</item>
        <item>Styracosaurus adalah dinosaurus herbivora dengan tanduk besar pada hidung dan lempeng tulang di punggungnya.</item>
        <item>Parasaurolophus adalah dinosaurus herbivora dengan kantung berongga di atas kepala yang digunakan untuk menghasilkan suara.</item>
        <item>Edmontosaurus adalah dinosaurus herbivora dengan tubuh besar dan paruh yang mirip bebek.</item>
        <item>Ankylosaurus adalah dinosaurus herbivora dengan tubuh yang dilapisi duri dan ekor yang berat dan bercabang.</item>
        <item>Euoplocephalus adalah dinosaurus herbivora dengan tubuh yang dilapisi duri dan tulang menonjol di bagian kepala.</item>
        <item>Therizinosaurus adalah dinosaurus herbivora dengan cakar yang besar dan tajam mirip pisau.</item>
        <item>Nothronychus adalah dinosaurus herbivora dengan cakar besar dan tubuh yang ramping.</item>
        <item>Pteranodon adalah dinosaurus terbang dengan sayap besar dan paruh panjang yang digunakan untuk menangkap ikan.</item>
        <item>Quetzalcoatlus adalah Pterosauria terbesar dengan sayap yang sangat besar dan paruh panjang.</item>
    </string-array>
    <string-array name="dino_group">
        <item>Sauropoda</item>
        <item>Sauropoda</item>
        <item>Theropoda</item>
        <item>Theropoda</item>
        <item>Ornithischia</item>
        <item>Ornithischia</item>
        <item>Ceratopsia</item>
        <item>Ornithischia</item>
        <item>Hadrosauridae</item>
        <item>Ankylosauria</item>
        <item>Ankylosauria</item>
        <item>Therizinosauria</item>
        <item>Therizinosauria</item>
        <item>Pterosauria</item>
        <item>Pterosauria</item>
    </string-array>
    <string-array name="dino_habitat">
        <item>Apatosaurus tinggal di daratan dan dataran rendah.</item>
        <item>Brachiosaurus tinggal di Daratan tinggi, hutan.</item>
        <item>Tyrannosaurus tinggal di Daratan tinggi, hutan.</item>
        <item>Velociraptor tinggal di Daratan tinggi, hutan.</item>
        <item>Triceratops tinggal di Padang rumput, hutan.</item>
        <item>Stegosaurus tinggal di Daratan tinggi, hutan.</item>
        <item>Styracosaurus tinggal di Padang rumput, hutan.</item>
        <item>Parasaurolophus tinggal di Daerah datar, hutan datar, dan padang rumput.</item>
        <item>Edmontosaurus tinggal di Hutan datar, daerah datar, dan padang rumput.</item>
        <item>Ankylosaurus tinggal di Hutan datar, daerah datar, dan padang rumput.</item>
        <item>Euoplocephalus tinggal di Hutan datar, daerah datar, dan padang rumput.</item>
        <item>Therizinosaurus tinggal di Hutan, daerah datar, dan padang rumput.</item>
        <item>Nothronychus tinggal di Hutan, daerah datar, dan padang rumput.</item>
        <item>Pteranodon tinggal di Wilayah pesisir, danau, sungai</item>
        <item>Quetzalcoatlus tinggal di Wilayah pesisir, danau, sungai</item>
    </string-array>
    <string-array name="dino_food">
        <item>Apatosaurus memakan Tumbuhan, seperti daun dan ranting.</item>
        <item>Brachiosaurus memakan Tumbuhan, seperti daun dan pucuk-pucuk. </item>
        <item>Tyrannosaurus memakan herbivora dan omnivora, seperti Triceratops, hadrosaurus, dan mangsa lainnya.</item>
        <item>Velociraptor memakan Hewan kecil dan mangsa lainnya, serta mungkin dinosaurus lebih kecil.</item>
        <item>Triceratops memakan Tumbuhan, seperti daun, pucuk, dan tanaman rendah lainnya</item>
        <item>Stegosaurus memakan Tumbuhan, seperti daun, pucuk, dan tanaman rendah lainnya.</item>
        <item>Styracosaurus memakan mbuhan, seperti daun, pucuk, dan tanaman rendah.</item>
        <item>Parasaurolophus memakan mbuhan, seperti daun, pucuk, dan tanaman rendah.</item>
        <item>Edmontosaurus memakan mbuhan, seperti daun, pucuk, dan tanaman rendah.</item>
        <item>Ankylosaurus memakan mbuhan, seperti daun, pucuk, dan tanaman rendah.</item>
        <item>Euoplocephalus memakan mbuhan, seperti daun, pucuk, dan tanaman rendah.</item>
        <item>Therizinosaurus memakan mbuhan, seperti daun, pucuk, dan tanaman rendah.</item>
        <item>Nothronychus memakan mbuhan, seperti daun, pucuk, dan tanaman rendah.</item>
        <item>Pteranodon memakan Ikan dan hewan kecil lainnya yang ditemui di perairan.</item>
        <item>Quetzalcoatlus memakan Ikan dan hewan kecil lainnya yang ditemui di perairan.</item>
    </string-array>
    <string-array name="dino_tinggi">
        <item>Apatosaurus mempunyai tinggi Sekitar 4,5-5 meter.</item>
        <item>Brachiosaurus mempunyai tinggi Sekitar 9-12 meter.</item>
        <item>Tyrannosaurus mempunyai tinggi Sekitar 4-6 meter.</item>
        <item>Velociraptor mempunyai tinggi Sekitar 0,5-0,6 meter.</item>
        <item>Triceratops mempunyai tinggi Sekitar 3-3,5 meter.</item>
        <item>Stegosaurus mempunyai tinggi Sekitar 4 meter.</item>
        <item>Styracosaurus mempunyai tinggi Sekitar 2,5-3 meter.</item>
        <item>Parasaurolophus mempunyai tinggi Sekitar 4-5 meter.</item>
        <item>Edmontosaurus mempunyai tinggi Sekitar 3-4 meter.</item>
        <item>Ankylosaurus mempunyai tinggi Sekitar 1,5-2 meter.</item>
        <item>Euoplocephalus mempunyai tinggi Sekitar 2-2,5 meter.</item>
        <item>Therizinosaurus mempunyai tinggi Sekitar 5-6 meter.</item>
        <item>Nothronychus mempunyai tinggi Sekitar 3-4 meter.</item>
        <item>Pteranodon mempunyai tinggi Sekitar 1,5 meter.</item>
        <item>Quetzalcoatlus mempunyai tinggi Sekitar 3-4 meter. </item>
    </string-array>
    <string-array name="dino_bobot">
        <item>Apatosaurus memiliki berat Diperkirakan sekitar 20-30 ton. </item>
        <item>Brachiosaurus memiliki berat Diperkirakan sekitar 30-60 ton.</item>
        <item>Tyrannosaurus memiliki berat Diperkirakan sekitar 8-14 ton.</item>
        <item>Velociraptor memiliki berat Diperkirakan sekitar 15-20 kilogram.</item>
        <item>Triceratops memiliki berat Diperkirakan sekitar 6-12 ton.</item>
        <item>Stegosaurus memiliki berat Diperkirakan sekitar 5-7 ton.</item>
        <item>Styracosaurus memiliki berat Diperkirakan sekitar 2-3 ton.</item>
        <item>Parasaurolophus memiliki berat Diperkirakan sekitar 2,5-3,5 ton. </item>
        <item>Edmontosaurus memiliki berat Diperkirakan sekitar 4-5 ton.</item>
        <item>Ankylosaurus memiliki berat Diperkirakan sekitar 4-6 ton.</item>
        <item>Euoplocephalus memiliki berat Diperkirakan sekitar 2,5-3 ton.</item>
        <item>Therizinosaurus memiliki berat Diperkirakan sekitar 5-6 ton.</item>
        <item>Nothronychus memiliki berat Diperkirakan sekitar 1-2 ton.</item>
        <item>Pteranodon memiliki berat Diperkirakan sekitar 20-25 kilogram.</item>
        <item>Quetzalcoatlus memiliki berat Diperkirakan sekitar 200-250 kilogram.</item>
    </string-array>
    <string-array name="dino_kelemahan">
        <item>Apatosaurus memiliki Kelemahan: Ukuran besar dapat membuatnya rentan terhadap predator besar dan mengurangi kecepatan geraknya. </item>
        <item>Brachiosaurus memiliki Kelemahan:Ukuran besar membuatnya rentan terhadap predator, serta mungkin memiliki masalah pernafasan karena ukuran tubuhnya.</item>
        <item>Tyrannosaurus memiliki Kelemahan:Kemungkinan kecepatan yang rendah dibandingkan dengan beberapa predator lainnya, serta ukuran tubuh yang besar mungkin membuatnya rentan terhadap cedera.</item>
        <item>Velociraptor memiliki Kelemahan:Ukuran tubuh yang kecil membuatnya rentan terhadap predator yang lebih besar, serta rentan terhadap cedera jika menyerang mangsa yang lebih besar.</item>
        <item>Triceratops memiliki Kelemahan:Rentan terhadap serangan predator karena gerakan yang lambat, meskipun tanduknya dapat digunakan untuk pertahanan.</item>
        <item>Stegosaurus memiliki Kelemahan:Rentan terhadap serangan predator karena gerakan yang lambat, serta mungkin memiliki keterbatasan manuver karena ukuran tubuh dan cakar yang besar.</item>
        <item>Styracosaurus memiliki Kelemahan:Rentan terhadap serangan predator karena gerakan yang lambat, meskipun tanduknya dapat digunakan untuk pertahanan.</item>
        <item>Parasaurolophus memiliki Kelemahan:Rentan terhadap serangan predator karena gerakan yang lambat, serta mungkin memiliki keterbatasan manuver karena ukuran tubuhnya.</item>
        <item>Edmontosaurus memiliki Kelemahan:Rentan terhadap serangan predator karena gerakan yang lambat dan mungkin memiliki keterbatasan pertahanan.</item>
        <item>Ankylosaurus memiliki Kelemahan:Kemungkinan gerakan yang lambat dan kekurangan dalam manuver, serta rentan terhadap serangan dari predator yang mengincar bagian tubuh yang tidak dilindungi.</item>
        <item>Euoplocephalus memiliki Kelemahan: Kemungkinan gerakan yang lambat dan kekurangan dalam manuver, serta rentan terhadap serangan dari predator yang mengincar bagian tubuh yang tidak dilindungi.</item>
        <item>Therizinosaurus memiliki Kelemahan: Meskipun memiliki cakar yang kuat, kemungkinan kecepatan gerakan yang lambat.</item>
        <item>Nothronychus memiliki Kelemahan: Meskipun memiliki cakar yang kuat, kemungkinan kecepatan gerakan yang lambat dan rentan terhadap serangan predator yang lebih cepat.</item>
        <item>Pteranodon memiliki Kelemahan: Rentan terhadap predator udara dan mungkin memiliki keterbatasan dalam manuver di darat.</item>
        <item>Quetzalcoatlus memiliki Kelemahan: Rentan terhadap predator udara dan mungkin memiliki keterbatasan dalam manuver di darat.</item>
    </string-array>
</resources>