<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/dinoGambar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/dino_gambar"
            app:srcCompat="@drawable/apa"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/dinoNama"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/dino_name"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/dinoGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/dino_group"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>